FIX: Task1-Task9 внесены правки: - везде убраны излишние проверки на null; - доработаны Задача 1,5,6 и 9 - согласно замечаниям.