@@ -1,10 +1,10 @@
 package tasks;
 
 import common.Person;
+
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /*
@@ -18,13 +18,10 @@ public class Task2 {
   public static List<Person> combineAndSortWithLimit(Collection<Person> persons1,
                                                      Collection<Person> persons2,
                                                      int limit) {
-    if (persons1 == null || persons2 == null || limit < 0) {
-      throw new IllegalArgumentException("Коллекции Person не должны быть null, а величина limit должна быть неотрицательна.");
-    }
 
     return Stream.concat(persons1.stream(), persons2.stream())
             .sorted(Comparator.comparing(Person::createdAt))
             .limit(limit)
-            .collect(Collectors.toList());     // Объединяем, сортируем и ограничиваем количество результатов
+            .toList();
   }
 }
