@@ -1,10 +1,10 @@
 package tasks;
 
 import common.Person;
+
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /*
 Задача 3
@@ -17,7 +17,7 @@ public class Task3 {
             .sorted(Comparator.comparing(Person::secondName)
             .thenComparing(Person::firstName)
             .thenComparing(Person::createdAt))
-            .collect(Collectors.toList());
+            .toList();
 
   }
 }
